# glad-cmake-install

./: CMakeLists.txt  Config.cmake.in  README.md
include/glad/: glad.h
src/: glad.c
